2004-05-14  Damien Sandras  <dsandras@gnome.org>

	* src/endpoint.cpp: Try to improve video quality.

2004-05-13  Damien Sandras  <dsandras@gnome.org>

	* src/endpoint.cpp: Added support for OpenH323 H.263+ if present.

2004-05-12  Damien Sandras  <dsandras@gnome.org>

	* src/endpoint.*: Only display the list of usable codecs.

2004-05-11  Damien Sandras  <dsandras@gnome.org>

	* src/Makefile.am, src/pref_window.cpp: Removed codec_info.* from
	the build as it is no longer required.

	* src/codec_info.cpp, src/codec_info.h: Removed them as they
	are no longer needed.

2004-05-11  Damien Sandras  <dsandras@gnome.org>

	* src/pref_window.cpp: Scroll to the new codec position when moving
	codecs up and down in the scrolled window.

2004-05-10  Damien Sandras  <dsandras@gnome.org>

	* src/endpoint.cpp: Removed disturbing cout.

2004-05-10  Damien Sandras  <dsandras@gnome.org>

	* src/common.h, src/config.cpp, src/endpoint.cpp, src/endpoint.h,
	src/gnomemeeting.cpp, src/lid.cpp, src/pref_window.cpp, 
	src/pref_window.h: Preliminary work to support codec on the form
	of plugins in GnomeMeeting.

2004-05-10  Julien Puydt <julien.puydt@laposte.net>

	* src/druid.h, src/druid.cpp: made the internal structure private, use
	a GtkWidget*-as-first-argument api and various cleanups.

	* src/common.h: removed the druid's internal structure.

	* src/gnomemeeting.h, src/gnomemeeting.cpp, src/sound_handling.cpp, 
	src/videograbber.cpp: made use of the api modifications of the druid.

2004-05-02  Damien Sandras  <dsandras@gnome.org>

	* configure.in: Updated to latest CVS.

	* lib/contacts/gm_contacts-eds.*: Updated to add search capabilities.

	* src/addressbook_window.cpp: Added search in the addressbook. Started
	to add support to add remote servers.

2004-04-29  Damien Sandras  <dsandras@gnome.org>

	* lib/contacts/gm_contacts-eds.cpp, src/addressbook_window.cpp: Added
	speed dials support thanks to the advice of Chris Toshok from Ximian.
	