@@ -1,3 +1,7 @@
+2004-05-16  Julien Puydt <julien.puydt@laposte.net>
+
+	* lib/gm_conf.h, lib/gm_conf-gconf.c: commented some more.
+
 2004-05-14  Damien Sandras  <dsandras@gnome.org>
 
 	* src/endpoint.cpp: Try to improve video quality.
